--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -20,3 +20,9 @@
   grid-column-gap: 30px;
   grid-row-gap: 30px;
 }
+
+.paragraph-spacing {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
