--- a/components/projectCard/projectCard.module.scss
+++ b/components/projectCard/projectCard.module.scss
@@ -27,13 +27,18 @@
     }
   }
 
-  &__github-link {
+  &__link {
     padding: 0.4rem 0.6rem;
     margin-top: 0.8rem;
     text-align: center;
     color: white;
     background-color: #333;
     border-radius: 8px;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      background-color: #555;
+    }
   }
 
   &__video {
