--- a/components/projectCard/projectCard.module.scss
+++ b/components/projectCard/projectCard.module.scss
@@ -7,7 +7,7 @@
   img {
     width: 100%;
     height: 300px;
-    object-fit: cover;
+    object-fit: contain;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
   }
